# edamampy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
classes/: ApiHandler.py  QueryBuilder.py  Validator.py
config/: settings.py
src/edamampy/: __init__.py
